set bucket drain lambda version

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
 
-    <BucketDrainLambda.version>1.0.0-SNAPSHOT</BucketDrainLambda.version>
+    <BucketDrainLambda.version>1.0.1</BucketDrainLambda.version>
     <CustomResourceLambda.version>1.0.0-SNAPSHOT</CustomResourceLambda.version>
     <ui.version>1.0.0-SNAPSHOT</ui.version>
   </properties>
