--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
     <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
 
     <BucketDrainLambda.version>1.0.1</BucketDrainLambda.version>
-    <CustomResourceLambda.version>1.0.0-SNAPSHOT</CustomResourceLambda.version>
-    <ui.version>1.0.0-SNAPSHOT</ui.version>
+    <CustomResourceLambda.version>1.0.0</CustomResourceLambda.version>
+    <ui.version>1.0.0</ui.version>
   </properties>
 
   <repositories>
@@ -323,8 +323,8 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.1.0</version>
         <executions>
           <execution>
             <id>resources</id>
@@ -401,7 +401,7 @@
           <plugin>
             <groupId>org.owasp</groupId>
             <artifactId>dependency-check-maven</artifactId>
-            <version>6.5.0</version>
+            <version>8.4.0</version>
             <configuration>
               <failBuildOnAnyVulnerability>true</failBuildOnAnyVulnerability>
             </configuration>
@@ -433,6 +433,20 @@
                 <phase>pre-site</phase>
               </execution>
             </executions>
+            <configuration>
+              <injectAllReactorProjects>true</injectAllReactorProjects>
+              <failOnNoGitDirectory>false</failOnNoGitDirectory>
+              <offline>true</offline>
+              <replacementProperties>
+                <replacementProperty>
+                  <property>git.remote.origin.url</property>
+                  <propertyOutputSuffix>suffix</propertyOutputSuffix>
+                  <token>^.+/(.+).git$</token>
+                  <value>$1</value>
+                  <regex>true</regex>
+                </replacementProperty>
+              </replacementProperties>
+            </configuration>
           </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -449,7 +463,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.2.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -487,6 +500,7 @@
             <artifactId>maven-site-plugin</artifactId>
           </plugin>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-resources-plugin</artifactId>
             <executions>
               <execution>
@@ -512,6 +526,7 @@
             </executions>
           </plugin>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
             <executions>
               <execution>
@@ -534,8 +549,7 @@
                       <arg value="javadoc"/>
                       <arg value="git@github.com:CI-CMG/project-documentation.git"/>
                     </exec>
-                    <exec dir="${project.build.directory}/project-documentation" executable="git"
-                      failonerror="false">
+                    <exec dir="${project.build.directory}/project-documentation" executable="git" failonerror="false">
                       <arg value="rm"/>
                       <arg value="-r"/>
                       <arg value="${git.remote.origin.url.suffix}/${project.version}"/>
