--- a/pom.xml
+++ b/pom.xml
@@ -422,6 +422,9 @@
 
     <profile>
       <id>release</id>
+      <properties>
+        <dashTimestamp></dashTimestamp>
+      </properties>
       <build>
         <plugins>
           <plugin>
